redefine reviewer.yml

--- a/.github/reviewer.yml
+++ b/.github/reviewer.yml
@@ -1,12 +1,16 @@
 --- 
-- groupA:
-    - githubID: userA
-      email: userA@microsoft.com
-    - githubID : someone
-      email: someone@microsoft.com
-    - githubID: ruowan
-      email: ruowan@microsoft.com
+- group:
+    name: default
+    users:
+        - githubID: userA
+          email: userA@microsoft.com
+        - githubID : someone
+          email: someone@microsoft.com
+        - githubID: ruowan
+          email: ruowan@microsoft.com
       
-- groupB:
-    - githubID: xxx
-      email: xxx@microsoft.com
+- group:
+    name: teamB
+    users: 
+        - githubID: xxx
+          email: xxx@microsoft.com
