--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -1,19 +1,21 @@
---- 
+---
 - scheduleTask:
-    name: "no-initial-response"
-    description: "None initial response in 24 hours"
-    branchWhitelist: ["master"]
-    action: sendEmailToAssignee
-    args:
-        limit: 24h
-        subject: "[Reminder] Please make a initial response to the PR"
-        message: The PR has no initial response in the last 24h. Please respond to the PR to update status.
-    
+      name: "no-initial-response"
+      description: "None initial response in 24 hours"
+      branchWhitelist: ["master"]
+      action: sendEmailToAssignee
+      args:
+          limit: 24h
+          subject: "[Reminder] Please make a initial response to the PR"
+          message: The PR has no initial response in the last 24h. Please respond to the PR to update status.
+
 - scheduleTask:
-    name: "no-update-in-5d"
-    description: "None update in PR in 5 days"
-    action: sendEmailToAssignee
-    args:
-        limit: 10s
-        subject: "[Action] Please respond to the PR" 
-        message: The PR has no update in the last 5 days. Please respond to the PR to update status.
+      name: "no-update-in-5d"
+      description: "None update in PR in 5 days"
+      branchWhitelist: ["master", "release"]
+      action: sendEmailToAssignee
+      args:
+          ignoredLabels: ["WaitForAuthor", "DonNotMerge"]
+          limit: 10s
+          subject: "[Action] Please respond to the PR"
+          message: The PR has no update in the last 5 days. Please respond to the PR to update status.
