--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -8,7 +8,7 @@
           ignoredLabels: ["WaitForAuthor", "DonNotMerge"]
           limit: 30s
           subject: "[Test] Please respond to the PR"
-          message: The PR has no response in the last 30s. Please respond to the PR to update status.  (This is a test email for sla-bot. Please ignore)
+          message: "The PR has no response in the last 30s. Please respond to the PR to update status.  (This is a test email for sla-bot. Please ignore)"
 
 - scheduleTask:
       name: "no-initial-response"
