--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -26,8 +26,8 @@
     args:
       booleanFilterExpression: "!ARMChangesRequested && !ARMReviewInProgress && WaitForARMFeedback"
       limit: 5s
-      subject: "Action Required: Please review the PR ${PR_URL}"
-      message: "Dear ARM team, The PR ${PR_URL} is waiting on ARM team review. Please response to the PR. After response to the PR, please remove WaitForARMFeedback label and the bot won't send notification email about the PR to you again."
+      subject: "Action Required: Please help to review PR ${PR_URL}"
+      message: "<p> Dear ARM review board, <br> <br>Please review PR {PR_URL}, the PR is waiting for ARM review over 3 days. Thanks.<br><hr /> <br>Quick info<ul><li>If you have feedback about the notification email, please contact us at vscswagger@microsoft.com.</li><li>After reviewing, please remove “WaitForARMFeedback” label from PR to correct state.</li></ul>Best regards,<br> Azure Management Experience</p>"
       to: ruowan@microsoft.com
     description: "single email point"
     name: "arm team"
