--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -40,7 +40,7 @@
 - scheduleTask:
     action: sendEmail
     args:
-      boolean: "Mgnt"
+      booleanFilterExpression: "Mgnt"
       limit: 5s
       subject: "Action Required: Please response to issues ${URL}"
       message: "Please response to the issues"
