--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -44,7 +44,11 @@
       limit: 5s
       subject: "Action Required: Please response to issues ${URL}"
       message: "Please response to the issues"
-      to: ruowan@microsoft.com
+      to: 
+        - ruowan@microsoft.com
+        - tih@microsoft.com
+      cc:
+        - tih@microsoft.com
     description: "issue triage"
     name: "issue owner"
     scope: issue
