--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -43,7 +43,7 @@
       booleanFilterExpression: "Mgnt"
       limit: 5s
       subject: "Action Required: Please response to issues ${URL}"
-      message: "Please response to the issues"
+      message: "Please response to the issues ${URL}"
       to: 
         - ruowan@microsoft.com
         - tih@microsoft.com
