--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -80,4 +80,5 @@
       limit: 5s
       message: "<p> Dear Swagger reviewer, <br> <br> Please response to the issue ${URL}. The issue isn't updated in 48 hours. <br> <hr /> <br> Quick info. <ul>  <li>If you have any question, please send email to Visual Studio China Swagger and Tool team vscswagger@microsoft.com.</li>  </ul> Best regards, <br> Azure Management Experience </p>"
       subject: "Action Required: Please respond to issue ${URL}"
+      cc: Ankun.Ning@microsoft.com
       
