--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -34,7 +34,7 @@
       - time
     args:
       booleanFilterExpression: "!ARMChangesRequested && !ARMReviewInProgress && WaitForARMFeedback"
-      limit: 100s
+      limit: 100d
       subject: "Action Required: Please help to review PR ${PR_URL}"
       message: "<p> Dear ARM review board, <br> <br>Please review PR ${PR_URL}, the PR is waiting for ARM review over 3 days. Thanks.<br><hr /> <br>Quick info<ul><li>If you have feedback about the notification email, please contact us at vscswagger@microsoft.com.</li><li>After reviewing, please remove “WaitForARMFeedback” label from PR to avoid receiving notification on the same PR.</li><li>Please do not reply to this email, this is an automatic generated email.</li></ul>Best regards,<br> Azure Management Experience</p>"
       to: ruowan@microsoft.com
@@ -50,7 +50,7 @@
       - time
     args:
       booleanFilterExpression: "Mgnt"
-      limit: 5s
+      limit: 100d
       subject: "Action Required: Please response to issues ${URL}"
       message: "Please response to the issues ${URL}"
       from: xxx@microsoft.com
@@ -70,7 +70,7 @@
     trigger: time
     args:
       booleanFilterExpression: "Mgnt"
-      limit: 5s
+      limit: 100d
       subject: "Action Required: Please response to issues ${URL}"
       message: "Please response to the issues ${URL}. send email to assignee"
       from: xxx@microsoft.com
