--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -1,20 +1,21 @@
 ---
 - scheduleTask:
-    action: sendEmailToAssignee
-    trigger: 
+    action: sendEmail
+    trigger:
       - time
     args:
       booleanFilterExpression: "!(WaitForARMFeedback||DoNotMerge||WaitingForAzureAPIBoard)"
-      limit: 1000d
+      limit: 10d
       message: '<p> Dear Swagger reviewer, <br> <br> Please response to the PR ${PR_URL}. The PR isn''t updated in 48 hours. <br> <hr /> <br> Quick info. <ul> <li>If no response from ARM review board, please send email to armapireview@microsoft.com.</li> <li>If need immediate ARM review, please get ARM review oncall contact point from ICM https://icm.ad.msft.net/imp/v3/oncall/current under Service "Azure Resource Manager" and Team "RP Manifest Approvers"</li> <li>If no response from Azure API review board, please send email to azureapirbcore@microsoft.com.</li> <li>If you have problem to fix CI task errors, please send email to Visual Studio China Swagger and Tool team vscswagger@microsoft.com.</li> <li>If you want to opt out from Swagger reviewing for out of office period, please set vacation date at https://inframonitorweb1.azurewebsites.net/Home/MyView.</li> <li>Pls refer to <a href="onenote:https://microsoft.sharepoint.com/teams/IoTToolingTeam/SiteAssets/IoT Tooling Team Notebook/Azure Management Experience - transition.one#Swagger%20reviewing%20process§ion-id={ECE847C4-519B-4448-A1A0-8E84A7EFE8AB}&page-id={F6E345FE-46E1-420F-B837-6BF76167DE05}&end">Swagger review process (onenote)</a> for more about Swagger review process.</li> </ul> Best regards, <br> Azure Management Experience </p>'
       subject: "Action Required: Please respond to PR ${PR_URL}"
+      to: "${ASSIGNEE}"
     description: "None initial response in 48 hours"
     scope: pull_request
     name: no-initial-response
 
 - scheduleTask:
-    action: sendEmailToAssignee
-    trigger: 
+    action: sendEmail
+    trigger:
       - time
       - label
     args:
@@ -22,6 +23,7 @@
       limit: 1000d
       message: '<p> Dear Swagger reviewer, <br> <br> Please response to the PR ${PR_URL}. The PR isn''t updated in 5 days. <br> <hr /> <br> Quick info. <ul> <li>If no response from ARM review board, please send email to armapireview@microsoft.com.</li> <li>If need immediate ARM review, please get ARM review oncall contact point from ICM https://icm.ad.msft.net/imp/v3/oncall/current under Service "Azure Resource Manager" and Team "RP Manifest Approvers"</li> <li>If no response from Azure API review board, please send email to azureapirbcore@microsoft.com.</li> <li>If you have problem to fix CI task errors, please send email to Visual Studio China Swagger and Tool team vscswagger@microsoft.com.</li> <li>If you want to opt out from Swagger reviewing for out of office period, please set vacation date at https://inframonitorweb1.azurewebsites.net/Home/MyView.</li> <li>Pls refer to <a href="onenote:https://microsoft.sharepoint.com/teams/IoTToolingTeam/SiteAssets/IoT Tooling Team Notebook/Azure Management Experience - transition.one#Swagger%20reviewing%20process§ion-id={ECE847C4-519B-4448-A1A0-8E84A7EFE8AB}&page-id={F6E345FE-46E1-420F-B837-6BF76167DE05}&end">Swagger review process (onenote)</a> for more about Swagger review process.</li> </ul> Best regards, <br> Azure Management Experience </p>'
       subject: "Action Required: Please respond to PR ${PR_URL}"
+      to: ${ASSIGNEE}
     description: "None update in PR in 5 days"
     name: no-update-in-5d
     scope: pull_request
@@ -30,7 +32,7 @@
 
 - scheduleTask:
     action: sendEmail
-    trigger: 
+    trigger:
       - time
     args:
       booleanFilterExpression: "!ARMChangesRequested && !ARMReviewInProgress && WaitForARMFeedback"
@@ -46,7 +48,7 @@
 
 - scheduleTask:
     action: sendEmail
-    trigger: 
+    trigger:
       - time
     args:
       booleanFilterExpression: "Mgnt"
@@ -54,7 +56,7 @@
       subject: "Action Required: Please response to issues ${URL}"
       message: "Please response to the issues ${URL}"
       from: xxx@microsoft.com
-      to: 
+      to:
         - ruowan@microsoft.com
         - tih@microsoft.com
       cc:
@@ -66,7 +68,7 @@
       - ruowan-test/sla-test-repo
 
 - scheduleTask:
-    action: sendEmailToAssignee
+    action: sendEmail
     trigger: time
     args:
       booleanFilterExpression: "Mgnt"
@@ -74,6 +76,8 @@
       subject: "Action Required: Please response to issues ${URL}"
       message: "Please response to the issues ${URL}. send email to assignee"
       from: xxx@microsoft.com
+      to:
+        - ${ASSIGNEE}
       cc:
         - qiaozha@microsoft.com
     description: "issue triage"
@@ -81,19 +85,18 @@
     scope: issue
     repoWhitelist:
       - ruowan-test/sla-test-repo
-      
 
 - scheduleTask:
     action: sendEmail
     scope: pull_request
     name: "linter rule candidate"
-    trigger: 
+    trigger:
       - label
-    args: 
+    args:
       booleanFilterExpression: "ValidationToolBug"
       limit: 10s
       message: "Dear Swagger and tools team. Please review this validation tools bug PR ${URL}"
       subject: "Action Required: Please help to fix the validation tools bug PR"
       to: ${ASSIGNEE}
-      cc: 
+      cc:
         - ${AUTHOR}
