--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -39,7 +39,7 @@
       booleanFilterExpression: "LintRuleCandidate||ValidationToolBug"
       limit: 10s
       message: '<p>Dear Swagger and Tools Team,</p><p>Please check the PR ${URL}. You receive the email because the PR is labeled "LintRuleCandidate" or "ValidationToolBug"</p><p>Quick info.</p><ul><li>After review, please ensure to replace the label &ldquo;LintRuleCandidate&rdquo; or "ValidationToolBug" with "LintRuleCandidateCollected" or "ValidationToolBugCollected", so that there will not be further notification email.</li></ul><p><em>DO NOT REPLY: This is an automated email. If you have any questions, please send an email to the Swagger and Tools Team (vscswagger@microsoft.com).</em></p><p>Best regards,</p><p>Swagger and Tools Team, Azure Management Experience</p>'
-      subject: "Action Required: Please review the PR ${URL}"
+      subject: "[TEST] Action Required: Please review the PR ${URL}"
       to: vscswagger@microsoft.com
       cc:
         - ${AUTHOR}
