--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -34,7 +34,7 @@
     trigger:
       - label
     args:
-      booleanFilterExpression: "(WaitForARMFeedback||WaitForARMRevisit)&&!NotReadyForReview"
+      booleanFilterExpression: "(WaitForARMFeedback||WaitForARMRevisit)&&!NotReadyForReview&&!ARMSignedOff&&!ARMChangesRequested"
       message: '<p>Dear ARM review board,</p><p>Please review the PR ${URL} . You receive the email because the PR is labeled with either "WaitForARMFeedback" or "WaitForARMRevisit".</p><p>Quick info.</p><ul><li>After review, please remove the label &ldquo;WaitForARMFeedback&rdquo; or "WaitForARMRevisit" from the PR, so that there will not be further notification email.</li></ul><p><em>DO NOT REPLY: This is an automated email. If you have any questions, please send an email to the Swagger and Tools Team (vscswagger@microsoft.com).</em></p><p>Best regards,</p><p>Swagger and Tools Team, Azure Management Experience</p>'
       subject: "Action Required: Please respond to the PR ${URL}"
       to: ruowantest@microsoft.com
