git add scheduleTask

--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -84,3 +84,14 @@
       to: vscswagger@microsoft.com
       cc:
         - ${ASSIGNEE}
+
+- scheduleTask:
+    action: sendEmail
+    scope: issue
+    args:
+      booleanFilterExpression: "triage"
+      limit: 48h
+      message: "<p> Dear Swagger reviewer, <br> <br> Please response to the issue ${URL} . The issue isn't updated in 48 hours. <br> <hr /> <br> Quick info. <ul>  <li>If you have any question, please send email to Visual Studio Swagger and Tool team vscswagger@microsoft.com.</li>  </ul> Best regards, <br> Azure Management Experience </p>"
+      subject: "Action Required: Please respond to issue ${URL}"
+      to: ${ASSIGNEE}
+      cc: vscswagger@microsoft.com
