--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -76,7 +76,7 @@
     scope: pull_request
     name: "send email to sdk owner"
     trigger:
-      - label
+      - label˚
     args:
       booleanFilterExpression: SDKBreakingChange
       message: '<p>Dear SDK owners,</p><p><br />Please help to review the PR ${URL}, the PR may carry SDK-breaking-changes, that requires your attention.</p><p>Quick info.</p><ul><li>After review, please ensure to replace the label &ldquo;LintRuleCandidate&rdquo; or "ValidationToolBug" with "LintRuleCandidateCollected" or "ValidationToolBugCollected", so that there will not be further notification email.</li></ul><p><em>DO NOT REPLY: This is an automated email. If you have any questions, please send an email to the Swagger and Tools Team (<a href="mailto:vscswagger@microsoft.com">vscswagger@microsoft.com</a>).</em></p><p>Best regards,</p><p>Swagger and Tools Team, Azure Management Experience</p>'
