--- a/.github/pull_request_assignment.yml
+++ b/.github/pull_request_assignment.yml
@@ -38,8 +38,10 @@
      - "package.json"
     reviewers:
       - ruowan
+      - NullMDR
 
 - rule:
     paths: "**"
     reviewers:
       - ruowan
+      - NullMDR
