--- a/.github/sla.yml
+++ b/.github/sla.yml
@@ -85,4 +85,4 @@
       to: ${AUTHOR}
       cc:
         - cplatsdkdev@microsoft.com
-        - ngdiarra@microsoft.com
+        - ruowan@microsoft.com
