--- a/.github/comment.yml
+++ b/.github/comment.yml
@@ -12,7 +12,8 @@
     type: checkbox
     keywords:
       - "waitForARMFeedback"
-    onCheckedLabel: WaitForARMFeedback
+    onCheckedLabels:
+      - WaitForARMFeedback
 # - rule:
 #   type: approved
 #   onApprovedLabel: approvedOkToMerge
