--- a/.github/comment.yml
+++ b/.github/comment.yml
@@ -4,7 +4,6 @@
     keywords:
       - "Removing API(s)"
       - "Updating API in stable version"
-    booleanFilterExpression: "!(ARMSignedOff||ARMChangesRequested||Approved-OkToMerge||WaitForARMRevisit)"
     onCheckedLabels:
       - breakingChange
     onCheckedComments: "Hi, ${PRAuthor} your PR contains breaking change. Pls follow..."
@@ -13,8 +12,10 @@
     type: checkbox
     keywords:
       - "waitForARMFeedback"
+    booleanFilterExpression: "!(ARMSignedOff||ARMChangesRequested||Approved-OkToMerge||WaitForARMRevisit)"
     onCheckedLabels:
       - WaitForARMFeedback
+    onApprovedComments: "Hi, ${PRAuthor} your PR was labelled with waitForARMFeedback. ${PRAssignee} needs your attention."
 # - rule:
 #   type: approved
 #   onApprovedLabel: approvedOkToMerge
