update comments template

--- a/.github/comment.yml
+++ b/.github/comment.yml
@@ -6,7 +6,7 @@
       - "Updating API in stable version"
     onCheckedLabels:
       - breakingChange
-    onCheckedComments: "Hi, ${PRAuthor} your PR contains breaking change. Pls follow..."
+    onCheckedComments: "Hi, @${PRAuthor} your PR contains breaking change. Pls follow..."
 
 - rule:
     type: checkbox
@@ -15,7 +15,7 @@
     booleanFilterExpression: "!(ARMSignedOff||ARMChangesRequested||Approved-OkToMerge||WaitForARMRevisit)"
     onCheckedLabels:
       - WaitForARMFeedback
-    onCheckedComments: "Hi, ${PRAuthor} your PR was labelled with WaitForARMFeedback. ${PRAssignee} needs your attention."
+    onCheckedComments: "Hi, @${PRAuthor} your PR was labelled with WaitForARMFeedback. @${PRAssignee} needs your attention."
 # - rule:
 #   type: approved
 #   onApprovedLabel: approvedOkToMerge
